--- a/src/view/Login.fxml
+++ b/src/view/Login.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.clientHandler"
+            fx:controller="controller.ClientHandler"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
